--- a/src/main/resources/templates/songform.html
+++ b/src/main/resources/templates/songform.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action ="#" th:action"@{/songform}" th:object="${song}
+<form action ="#" th:action"@{/songform}" th:object="${song}"
 method="post">
 Name: <input type="text" th:field="*{name}"/><br />
 Artist: <input type="text" th:field="*{artist}"/><br />
